[package]
name = "pingsender-rs"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

[dependencies]
log = "0.4.1"
env_logger = "0.5.6"

[dependencies.flate2]
version = "1.0"
features = ["rust_backend"]

[dependencies.reqwest]
version = "0.9.8"
default-features = false
features = ["rustls-tls"]

[profile.release]
lto = true
panic = 'abort'
