[package]
name = "pingsender-rs"
version = "0.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>"]
description = "A minimalistic program whose sole purpose is to deliver a telemetry ping"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/toolkit/components/telemetry/pingsender"
license = "MPL-2.0"

[[bin]]
name = "pingsender"

[dependencies]
log = "0.4.1"
env_logger = "0.5.6"
time = "0.1"

[dependencies.flate2]
version = "1.0"
features = ["rust_backend"]

[dependencies.reqwest]
version = "0.9.8"
default-features = false
features = ["rustls-tls"]

[profile.release]
lto = true
panic = 'abort'
