[package]
name = "pingsender-rs"
version = "0.1.0"
authors = ["Jan-Erik Rediger <jrediger@mozilla.com>"]
description = "A minimalistic program whose sole purpose is to deliver a telemetry ping"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/toolkit/components/telemetry/pingsender"
license = "MPL-2.0"
edition = "2018"

[[bin]]
name = "pingsender"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.6"
time = "0.1"

[dependencies.flate2]
version = "1.0"
features = ["rust_backend"]

[dependencies.chttp]
version = "0.4"
default-features = false

[profile.release]
lto = true
panic = 'abort'
